MDEV-13143 Server crashes in srv_init_abort_low() when started with inaccessible tmpdir

This is a regression caused by
commit bb60a832ede139d24a2470a1b1217d30799d726e

srv_shutdown_all_bg_threads(): If os_thread_count indicates that
no threads are running, do not bother checking thread status.
This avoids a crash when InnoDB startup is aborted before
os_aio_init() has been invoked. (os_aio_all_slots_free() would
dereference AIO::s_reads even though it is NULL.)